--- a/Config.json
+++ b/Config.json
@@ -33,6 +33,12 @@
               ]
             },
             {
+              "type": "date",
+              "dispLabel" : "added Date",
+              "param": "date",
+              "isEn" :"true"
+            },
+            {
               "type": "text",
               "dispLabel": "X value",
               "param": "xValue"
@@ -76,7 +82,8 @@
             "device" : "0",
             "xValue" : "0",
             "yValue" : "0",
-            "status" : "0"
+            "status" : "0",
+            "date": "2017-6-6"
           }
         }
       ]
