--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A React+Mobx+Socket single way flow data visualization and analytics generator. ",
   "main": "ViewCompiler.js",
   "scripts": {
-    "test": "node ViewCompiler.js Config.json"
+    "test": "node Compiler.js Config.json"
   },
   "repository": {
     "type": "git",
