repo update after a year

--- a/doc/Samples/1.Basic-Formset/Config.json
+++ b/doc/Samples/1.Basic-Formset/Config.json
@@ -27,7 +27,7 @@
                   "id": "H"
                 }, {"dispLabel": "Device3",
                   "id": "L"
-                }, {"dispLabel": "Device4",
+                }, {"dispLabel": "Device-A",
                   "id": "Z"
                 }
               ]
