--- a/doc/Samples/5.Multiple-Panels/Config.json
+++ b/doc/Samples/5.Multiple-Panels/Config.json
@@ -7,7 +7,6 @@
   },
   "path" : "./app",
   "port" : "3000",
-  "maxMemorySize" : "30",
   "pages" : [
     {
       "name" : "Data Panel",
@@ -95,8 +94,7 @@
       "layout" : "default",
       "panels" : [
         {
-          "type": "stacked-graph",
-          "windowSize":"20",
+          "type": "graph",
           "store": {
             "socket":{
               "id": "0",
@@ -106,8 +104,7 @@
           }
         },
         {
-          "type": "scatter",
-          "windowSize":"20",
+          "type": "pie",
           "store": {
             "socket":{
               "id": "0",
