add new sample to show multiple devices on the same viz

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "sample-4": "node Compiler.js doc/Samples/4.Multiple-Devices/Config.json; cp doc/Samples/4.Multiple-Devices/Data-mocker.js ./app",
         "sample-5": "node Compiler.js doc/Samples/5.Multiple-Panels/Config.json; cp doc/Samples/5.Multiple-Panels/Data-mocker.js ./app",
         "sample-6": "node Compiler.js doc/Samples/6.Multiple-Socket-IDs/Config.json; cp doc/Samples/6.Multiple-Socket-IDs/Data-mocker.js ./app",
+        "sample-6a": "node Compiler.js doc/Samples/6A.Multiple-Socket-IDs-II/Config.json; cp doc/Samples/6A.Multiple-Socket-IDs-II/Data-mocker.js ./app",
         "sample-7": "node Compiler.js doc/Samples/7.Bar-Scroll/Config.json; cp doc/Samples/7.Bar-Scroll/Data-mocker.js ./app",
         "sample-8": "node Compiler.js doc/Samples/8.Max-Mem-Size/Config.json; cp doc/Samples/8.Max-Mem-Size/Data-mocker.js ./app",
         "sample-9": "node Compiler.js doc/Samples/9.Diagram/Config.json; cp doc/Samples/8.Max-Mem-Size/Data-mocker.js ./app",
